[package]
name = "either"
version = "0.3.1"
edition = "2024"
description = "a general purpose sum type with two cases"
authors = ["Huang Yifan <hyf_yifan@qq.com>"]
repository = "https://github.com/HyfLink/either.git"
readme = "README.md"

[features]
default = ["std"]
std = ["serde?/std"]
nightly = []
panic_immediate_abort = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true, features = [
    "derive",
] }
