[package]
name = "either"
version = "0.3.2"
edition = "2024"
description = "a general purpose sum type with two cases"
authors = ["Huang Yifan <hyf_yifan@qq.com>"]
repository = "https://github.com/HyfLink/either.git"
readme = "README.md"

[features]
default = ["std"]
std = ["serde?/std"]
panic_immediate_abort = []
serde = ["dep:serde"]

[dependencies]
[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]
